lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_string_prepare_copy/buffer_string_prepare_copy3/buffer_string_prepare_copy3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_string_prepare_copy/buffer_string_prepare_copy3/buffer_string_prepare_copy3.c:22:54: error: use of undeclared identifier 's__b'
    char * futag_target = buffer_string_prepare_copy(s__b ,q_b__size );
                                                     ^
1 error generated.
